--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "@tailwindcss/forms": "^0.5.7",
     "chart.js": "^4.4.1",
     "chartjs-adapter-moment": "^1.0.1",
+    "firebase": "^10.14.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.20.1",
+    "react-toastify": "^10.0.6",
     "react-transition-group": "^4.4.5",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
