--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "chartjs-adapter-moment": "^1.0.1",
     "firebase": "^10.14.1",
     "moment": "^2.29.4",
+    "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-international-phone": "^4.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.20.1",
     "react-toastify": "^10.0.6",
