--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
